# kTok

./: .gitignore  README.md  pyproject.toml
docs/: market-realism.md
ktok/: __init__.py  __main__.py  cli.py  main.py
ktok/dev/: run_engine.py
ktok/engine/: assets.py  cache.py  prices.json  pricing.py  signals.py
ktok/state/: portfolio.py
ktok/tui/: app.py  panels.py  ticker.py
tests/: test_assets.py  test_portfolio.py  test_pricing.py
